removed random apostrophes

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <span class="Header">
       <h1> I'm Hannah.</h1>
       <p class="subtitle"> a <span class="pro">pro</span>grammer and an <span class="art">art</span>ist.</p>
-    ``</span>
+    </span>
       <img class="space-cat" src="images/space-cat.png" alt="space-cat-img">
     </div>
 
