created a contact page

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <h3>I'm ready for any learning opportunity.</h3>
         <p>Learning indefinitely is the most valuable skill that differentiates success and failure.
         <br> I'd be honoured to be able to learn from you in practice.</p>
-        <a class="btn" href="mailto:hcarino.official@gmail.com">CONTACT ME</a>
+        <a class="btn" href="contact-me.html">CONTACT ME</a>
       </div>
     </div>
 
